移除carla
