# contracts/openapi.yaml
@@ -134,14 +134,6 @@ components:
     MapSummary:
       additionalProperties: false
       properties:
-        carla_map:
-          minLength: 1
-          title: Carla Map
-          type: string
-        carla_version:
-          minLength: 1
-          title: Carla Version
-          type: string
         map_id:
           minLength: 1
           title: Map Id
@@ -150,13 +142,16 @@ components:
           minLength: 1
           title: Network Schema Version
           type: string
+        sumo_version:
+          minLength: 1
+          title: Sumo Version
+          type: string
         validated:
           title: Validated
           type: boolean
       required:
       - map_id
-      - carla_map
-      - carla_version
+      - sumo_version
       - validated
       - network_schema_version
       title: MapSummary
@@ -246,7 +241,7 @@ components:
       type: object
 info:
   title: TrafficVerse API
-  version: 1.0.0
+  version: 2.0.0
 openapi: 3.1.0
 paths:
   /api/v1/experiments:
